mobile style experiment

--- a/index.html
+++ b/index.html
@@ -96,10 +96,12 @@
         under emergent capitalism in post-Soviet Russia. Over the intervening years, I developed that
         project into a book, entitled <a href="https://www.cornellpress.cornell.edu/book/9781501779794/cultural-capitalism/">
           <em>Cultural Capitalism: Literature and the Market after Socialism</em></a>,
-        which will be published in March 2025 by Cornell University Press.</p> Research for that book
-        included a deep dive into 1990s bestsellers in Russia. Along with two research assistants at
-        Georgetown, I catalogued every title to appear on Russia's central bestseller lists in the first
-        post-Soviet decade. You can download the dataset and view some visualizations here.
+        which will be published in March 2025 by Cornell University Press.</p>
+        <p>
+          Research for that book included a deep dive into 1990s bestsellers in Russia. Along with two research assistants at
+          Georgetown, Amelia Bejamin and Nina Armstrong, I catalogued every title to appear on Russia's central bestseller lists in the first
+          post-Soviet decade. You can download the dataset and view some visualizations here.
+        </p>
       <p>My secondary research interests have led me to investigate such disparate subjects as Soviet
         postwar subcultures, disgust in science fiction, medieval festivals in contemporary Russia,
         and performance as a mode of realism in the prose of Vladimir Sharov and Nikolai Gogol.
