added viewport meta tag to index.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Bradley Gorski's Site</title>
 
   <link rel="icon" href="images/favicon.ico" sizes="any">
