added margins on mobile

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 </div>
 
   </div>
+  <div class="row">
   <div class="middle-container">
     <div class="profile">
       <img class="circular" src="https://0.academia-photos.com/11961648/3587097/19816011/s200_bradley.gorski.jpg" alt="Picture of Bradley Gorski">
@@ -119,6 +120,7 @@
         and even read a blog which I update occasionally, as inspiration strikes. If you have any questions,
         or want to contact me for any reason, please do so <a href="contact.html">here</a>.</p>
         <br />
+          </div>
         <div class="row">
           <div class="col-lg-3 col-md-6">
             <a href="research.html" class="btn endmenu">Research</a>
