--- a/writing.html
+++ b/writing.html
@@ -71,6 +71,7 @@
 
   </div>
   <div class="middle-container">
+    <div class="row">
     <div class="profile">
 
       <a name="published"></a>
@@ -299,7 +300,7 @@
       <a name="latest"></a><hr />
       <h2 align="center">World Literature is Postsocialist Literature</h2>
       <br />
-      <div class="content">
+
         <p>Note: <em>This is a talk I gave at the last ASEEES conference. It informs part of my book project, but
         I also kind of like it as a stand-alone piece. I hope you enjoy.</em></p>
         <p>
@@ -316,7 +317,6 @@
         </p>
 
 
-    </div>
         </p>
         <h4 align="right">
           <a href="writing.html">top</a>
@@ -325,51 +325,51 @@
         <h2 align="center">Archive</h2>
         <br />
         <div class="row">
-          <div class="col-lg-4 col-md-6">
+          <div class="col-lg-4 col-md-6 col-sm-8">
             <a href="blog/conspiracies-of-competence.html"><img class="feature" src="images/lozhkin-mendeleev.jpg" /></a>
             <h4><a href="blog/conspiracies-of-competence.html">Conspiracies of Competence</a></h4>
             <p class="blog-date">
               18 July 2018
             </p>
           </div>
-          <div class="col-lg-4 col-md-6">
+          <div class="col-lg-4 col-md-6 col-sm-8">
             <img class="feature" src="images/korzhev.jpg" />
             <h4>The Soviet Union as Love Story</h4>
             <p class="blog-date">
               28 June 2016
             </p>
           </div>
-          <div class="col-lg-4 col-md-6">
+          <div class="col-lg-4 col-md-6 col-sm-8">
             <img class="feature" src="images/ulitskaia.jpg" />
             <h4>Resurrecting Resistance for the Putin Era</h4>
             <p class="blog-date">
               31 December 2015
             </p>
           </div>
-          <div class="col-lg-4 col-md-6">
+          <div class="col-lg-4 col-md-6 col-sm-8">
             <img class="feature" src="images/balabanov.jpg" />
             <h4>How I Learned to Stop Worrying and Love the Trigger Warning</h4>
             <p class="blog-date">
               10 September 2015
             </p>
           </div>
-            <div class="col-lg-4 col-md-6">
+            <div class="col-lg-4 col-md-6 col-sm-8">
               <img class="feature" src="images/ganieva.jpg" />
               <h4>Between Moscow and Makhachkala</h4>
               <p class="blog-date">
                 18 July 2018
               </p>
             </div>
-              <div class="col-lg-4 col-md-6">
+              <div class="col-lg-4 col-md-6 col-sm-8">
                   <img class="feature" src="images/dfw.png" />
                   <h4>Writers of Reason, Writers of Wonder</h4>
                   <p class="blog-date">
                     10 September 2015
                   </p>
                 </div>
-            </div>
 
-
+              </div>
+              
         <h4 align="right">
           <a href="writing.html">top</a>
         </h4>
