attempts to fix floating images

--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,10 @@
 
         <div class="col-lg-6">
           <h1>Contact</h1>
-          <h4><a href="mailto:bradley.gorski@georgetown.edu">bradley.gorski@georgetown.edu</a></h4>
+          <h4><a href="mailto:bradley.gorski@georgetown.edu">bradley.gorski@georgetown.edu</a>
+            <br />
+            <br />
+          </h4>
         </div>
         <div class="col-lg-6">
           <img class="headline" src="images/nozdrin-card.jpg" />
