--- a/research.html
+++ b/research.html
@@ -63,6 +63,8 @@
             <a href="#articles">Articles</a></br>
             <a href="#other">More</a></br>
             <a href="https://georgetown.academia.edu/BradleyGorski/CurriculumVitae">CV</a>
+            <br />
+            <br />
           </h4>
 
         </div>
@@ -73,6 +75,7 @@
     </div>
 
   </div>
+  <div class="row">
   <div class="middle-container">
     <div class="profile">
     </h4>
@@ -371,7 +374,7 @@
       <h4 align="right">
         <a href="research.html">top</a>
       </h4>
-
+  </div>
       <hr />
       <div class="row">
         <div class="col-lg-3 col-md-6">
