--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Bradley Gorski's Site</title>
 
-  <link rel="icon" href="images/favicon.ico" sizes="any">
+  <link rel="shortcut icon" href="images/favicon.ico" sizes="any">
 
   <!-- CSS stylesheets -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -120,7 +120,7 @@
         and even read a blog which I update occasionally, as inspiration strikes. If you have any questions,
         or want to contact me for any reason, please do so <a href="contact.html">here</a>.</p>
         <br />
-          </div>
+
         <div class="row">
           <div class="col-lg-3 col-md-6">
             <a href="research.html" class="btn endmenu">Research</a>
