--- a/teaching.html
+++ b/teaching.html
@@ -71,6 +71,7 @@
 
   </div>
   <div class="middle-container">
+    <div class="row">
     <div class="profile">
       <a name="courses"></a><hr />
       <h2 align="center">Courses Taught</h2>
@@ -238,6 +239,8 @@
               <h4 align="right">
                 <a href="teaching.html">top</a>
               </h4>
+            </div>
+            
         <hr />
         <div class="row">
           <div class="col-lg-3 col-md-6">
