--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               </div>
           </nav>
 
-<div class="title-container">
+<div class="title-container" align="center">
   <div class="row">
 
     <div class="col-lg-6">
