trying for center rod blocks on chrome ios

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     </div>
     <div class="col-lg-6">
-      <div class="rodchenko">
+      <div class="rodchenko" align="center">
         <a href="research.html">
           <div class="rodbox rodbox-one">
             <img src="images/Rodchenko3Colors-Red.jpg" class="img-base" alt="rodchenko-red">
