--- a/writing.html
+++ b/writing.html
@@ -335,15 +335,15 @@
             </p>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-8">
-            <img class="feature" src="images/korzhev.jpg" />
-            <h4>The Soviet Union as Love Story</h4>
+            <a href="blog/korzhev.html"><img class="feature" src="images/korzhev.jpg" /></a>
+            <h4><a href="blog/korzhev.html">The Soviet Union as Love Story</a></h4>
             <p class="blog-date">
               28 June 2016
             </p>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-8">
-            <img class="feature" src="images/ulitskaia.jpg" />
-            <h4>Resurrecting Resistance for the Putin Era</h4>
+            <a href="blog/resurrecting-resistance.html"><img class="feature" src="images/ulitskaia.jpg" /></a>
+            <h4><a href="blog/resurrecting-resistance.html">Resurrecting Resistance for the Putin Era</a></h4>
             <p class="blog-date">
               31 December 2015
             </p>
@@ -356,15 +356,15 @@
             </p>
           </div>
             <div class="col-lg-4 col-md-6 col-sm-8">
-              <img class="feature" src="images/ganieva.jpg" />
-              <h4>Between Moscow and Makhachkala</h4>
+              <a href="blog/moscow-makhachkala.html"><img class="feature" src="images/ganieva.jpg" /></a>
+              <h4><a href="blog/moscow-makhachkala.html">Between Moscow and Makhachkala</a></h4>
               <p class="blog-date">
                 18 July 2018
               </p>
             </div>
               <div class="col-lg-4 col-md-6 col-sm-8">
-                  <img class="feature" src="images/dfw.png" />
-                  <h4>Writers of Reason, Writers of Wonder</h4>
+                  <a href="blog/writers-of-reason.html"><img class="feature" src="images/dfw.png" /></a>
+                  <h4><a href="blog/writers-of-reason.html">Writers of Reason, Writers of Wonder</a></h4>
                   <p class="blog-date">
                     10 September 2015
                   </p>
@@ -375,6 +375,10 @@
         <h4 align="right">
           <a href="writing.html">top</a>
         </h4>
+        <hr />
+        <h3 align="center"><a href="blog/archive.html">Full Blog Archive</a></h3>
+
+
         <hr />
         <div class="row">
           <div class="col-lg-3 col-md-6">
