--- a/writing.html
+++ b/writing.html
@@ -328,6 +328,13 @@
         <br />
         <div class="row">
           <div class="col-lg-4 col-md-6 col-sm-8">
+            <a href="blog/bestsellers-of-moscow.html"><img class="feature" src="images/bestsellers-chart.png" /></a>
+            <h4><a href="blog/bestsellers-of-moscow.html">Bestsellers of Moscow</a></h4>
+            <p class="blog-date">
+              10 August 2024
+            </p>
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-8">
             <a href="blog/conspiracies-of-competence.html"><img class="feature" src="images/lozhkin-mendeleev.jpg" /></a>
             <h4><a href="blog/conspiracies-of-competence.html">Conspiracies of Competence</a></h4>
             <p class="blog-date">
@@ -346,13 +353,6 @@
             <h4><a href="blog/resurrecting-resistance.html">Resurrecting Resistance for the Putin Era</a></h4>
             <p class="blog-date">
               31 December 2015
-            </p>
-          </div>
-          <div class="col-lg-4 col-md-6 col-sm-8">
-            <img class="feature" src="images/balabanov.jpg" />
-            <h4>How I Learned to Stop Worrying and Love the Trigger Warning</h4>
-            <p class="blog-date">
-              10 September 2015
             </p>
           </div>
             <div class="col-lg-4 col-md-6 col-sm-8">
