--- a/archive.html
+++ b/archive.html
@@ -70,6 +70,13 @@
     <div class="content">
       <div class="row">
         <div class="col-lg-4 col-md-6 col-sm-8">
+          <a href="blog/bestsellers-of-moscow.html"><img class="feature" src="images/bestsellers-chart.png" /></a>
+          <h4><a href="blog/bestsellers-of-moscow.html">Bestsellers of Moscow</a></h4>
+          <p class="blog-date">
+            10 August 2024
+          </p>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-8">
           <a href="blog/conspiracies-of-competence.html"><img class="feature" src="images/lozhkin-mendeleev.jpg" /></a>
           <h4><a href="blog/conspiracies-of-competence.html">Conspiracies of Competence</a></h4>
           <p class="blog-date">
@@ -84,26 +91,19 @@
           </p>
         </div>
         <div class="col-lg-4 col-md-6 col-sm-8">
+          <a href="blog/fictional-criticism.html"><img class="feature" src="https://m.media-amazon.com/images/I/81LcZ2b+phL._AC_UF1000,1000_QL80_.jpg" /></a>
+          <h4><a href="blog/fictional-criticism.html">Fictional Criticism</a></h4>
+          <p class="blog-date">
+            6 January 2016
+          </p>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-8">
           <a href="blog/resurrecting-resistance.html"><img class="feature" src="images/ulitskaia.jpg" /></a>
           <h4><a href="blog/resurrecting-resistance.html">Resurrecting Resistance for the Putin Era</a></h4>
           <p class="blog-date">
             31 December 2015
           </p>
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-8">
-          <img class="feature" src="images/balabanov.jpg" />
-          <h4>How I Learned to Stop Worrying and Love the Trigger Warning</h4>
-          <p class="blog-date">
-            10 September 2015
-          </p>
-        </div>
-          <div class="col-lg-4 col-md-6 col-sm-8">
-            <a href="blog/moscow-makhachkala.html"><img class="feature" src="images/ganieva.jpg" /></a>
-            <h4><a href="blog/moscow-makhachkala.html">Between Moscow and Makhachkala</a></h4>
-            <p class="blog-date">
-              18 July 2018
-            </p>
-          </div>
             <div class="col-lg-4 col-md-6 col-sm-8">
                 <a href="blog/writers-of-reason.html"><img class="feature" src="images/dfw.png" /></a>
                 <h4><a href="blog/writers-of-reason.html">Writers of Reason, Writers of Wonder</a></h4>
