--- a/index.html
+++ b/index.html
@@ -95,29 +95,31 @@
       <br />
       <p>I'm an Assistant Professor in the <a href="https://slaviclanguages.georgetown.edu/">Department of Slavic Languages</a> at <a href="https://www.georgetown.edu">Georgetown University</a>.
         I completed my Ph.D. at Columbia University (2018) with a dissertation on literary prominence
-        under emergent capitalism in post-Soviet Russia. Over the intervening years, I developed that
+        under emergent capitalism in post-Soviet Russia. Since then, I developed that
         project into a book, entitled <a href="https://www.cornellpress.cornell.edu/book/9781501779794/cultural-capitalism/">
           <em>Cultural Capitalism: Literature and the Market after Socialism</em></a>,
         which will be published in March 2025 by Cornell University Press.</p>
         <p>
           Research for that book included a deep dive into 1990s bestsellers in Russia. Along with two research assistants at
           Georgetown, Amelia Bejamin and Nina Armstrong, I catalogued every title to appear on Russia's central bestseller lists in the first
-          post-Soviet decade. You can download the dataset and view some visualizations here.
+          post-Soviet decade. You can download the dataset and view some visualizations <a href="blog/bestsellers-of-moscow.html">here</a>.
         </p>
-      <p>My secondary research interests have led me to investigate such disparate subjects as Soviet
+      <p>My secondary <a href="research.html">research interests</a> have led me to investigate such disparate subjects as Soviet
         postwar subcultures, disgust in science fiction, medieval festivals in contemporary Russia,
         and performance as a mode of realism in the prose of Vladimir Sharov and Nikolai Gogol.
         I have also co-led a multi-year research project into the transnational movements of leftist artists
         and thinkers in the post-1917 era. This project is meant as a corrective to the binaristic Cold War thinking
       that is at the heart the Slavic field. That project resulted in a book called <a href="https://utorontopress.com/9781487543891/red-migrations/">
         <em>Red Migrations: Transnational Mobility and Leftist Culture after 1917</em></a>, out with University of Toronto Press in September 2024.</p>
-      <p>I have been fortunate enough to teach both language and literature courses at Columbia, Barnard, Vanderbilt
+      <p>I have been fortunate enough to <a href="teaching.html">teach</a> both language and literature courses at Columbia, Barnard, Vanderbilt
         and now Georgetown. I also advise undergraduate and master's theses at Georgetown and have been lucky enough
       to serve on a few doctoral committees at other institutions. Outside of my strictly academic tasks, I have been
     a strong advocate for academic unionization. I helped lead the graduate student union at Columbia and believe that
     Georgetown faculty, especially contingent faculty, needs to unionize to demand better treatment from the university.</p>
-      <p>On this site, you can read more about my teaching experience, find links to some of my publications,
-        and even read a blog which I update occasionally, as inspiration strikes. If you have any questions,
+      <p>On this site, you can read more about my <a href="teaching.html">teaching experience</a>,
+        find links to some of my <a href="research.html">publications</a>,
+        and read some of my public-facing <a href="writing.html">writing</a>, including a <a href="archive.html">blog</a>
+        which I update occasionally, as inspiration strikes. If you have any questions,
         or want to contact me for any reason, please do so <a href="contact.html">here</a>.</p>
         <br />
 
