--- a/teaching.html
+++ b/teaching.html
@@ -75,38 +75,17 @@
     <div class="profile">
       <a name="courses"></a><hr />
       <h2 align="center">Courses Taught</h2>
-      <br />
-      <hr />
-      <div class="row">
-        <div class="col-lg-6">
-          <h4 align="center"><a href="#russlang">Russian Language</a></h4>
-        </div>
-        <div class="col-lg-6">
-          <h4 align="center"><a href="#litcult">Literature & Culture</a></h4>
-        </div>
-      </div>
-      <hr />
-      <br />
-
-      <h3 align="center">Russian Language</h3>
-      <hr />
-    </br>
-      <p>
-        Elementary Russian (textbooks: <em>Nachalo</em>, <em>Golosa</em>, <em>Beginner's Russian</em>)
-      </p>
-      <p>
-        Intermediate Russian (textbooks: <em>Golosa</em>, <em>V puti</em>)
-      </p>
-      <p>
-        Russian through Culture (4th-year level) (themes: History in Putin's Russia (spring 2022))
-      <a name="litcult"></a></p>
-      <br />
-      <hr />
-      <h3 align="center">Literature & Culture</h3>
       <hr />
       <br />
         <h4>The Undead</h4>
           <br />
+          <div class="row">
+
+            <figure>
+
+            <img class="img-proj" src="images/undead-banner.png" width="100%" alt="">
+            </figure>
+              </div>
           <p>I've taught this class a couple of times as a first-year
            seminar, once at Barnard (fall 2017) and once at Georgetown (fall 2021). We
           start with burial and the belief in immortality in world cultures and then we move
@@ -190,6 +169,51 @@
         <table>
           <tr>
             <td width="20%">
+              2024
+            </td>
+            <td width="80%">
+              <p>
+                Emily Gorny. “Americanization and Adaptation: Analyzing Hybrid Identities in the
+                Storytelling of Soviet American Émigrés.” Bachelor’s Thesis. Department of Slavic Languages,
+                Georgetown University.
+              </p>
+            </td>
+          </tr>
+          <tr>
+            <td width="20%">
+              2024
+            </td>
+            <td width="80%">
+              <p>
+                Aileen Flanery. “Consumer Kitsch in the Brezhnev Era.” Master’s Capstone.
+                MAERES/CERES, Georgetown University.
+              </p>
+            </td>
+          </tr>
+          <tr>
+            <td width="20%">
+              2023
+            </td>
+            <td width="80%">
+              <p>
+                Bailey Aguilar. “The Suess/Nabokov Nexus.” Master’s Capstone.
+                MAERES/CERES, Georgetown University.
+              </p>
+            </td>
+          </tr>
+          <tr>
+            <td width="20%">
+              2022
+            </td>
+            <td width="80%">
+              <p>
+                Orest Mahlay. “The Russian Language and Ukrainian Political Affiliation.”
+                Bachelor’s Thesis. Department of Slavic Languages, Georgetown University.
+              </p>
+            </td>
+          </tr>
+          <tr>
+            <td width="20%">
               2021
             </td>
             <td width="80%">
@@ -239,7 +263,7 @@
               <h4 align="right">
                 <a href="teaching.html">top</a>
               </h4>
-            
+
 
         <hr />
         <div class="row">
