Updates to CC project page

--- a/CulturalCapitalism.html
+++ b/CulturalCapitalism.html
@@ -64,55 +64,68 @@
 
   </div>
   <br />
-
-<div class="row">
+  <div class="row">
   <div class="middle-container">
-    <div class="content">
-      <div class="row">
-        <div class="col-lg-4 col-md-6 col-sm-8">
-          <a href="blog/bestsellers-of-moscow.html"><img class="feature" src="images/bestsellers-chart.png" /></a>
-          <h4><a href="blog/bestsellers-of-moscow.html">Bestsellers of Moscow</a></h4>
-          <p class="blog-date">
-            10 August 2024
-          </p>
-        </div>
-        <div class="col-lg-4 col-md-6 col-sm-8">
-          <a href="blog/conspiracies-of-competence.html"><img class="feature" src="images/lozhkin-mendeleev.jpg" /></a>
-          <h4><a href="blog/conspiracies-of-competence.html">Conspiracies of Competence</a></h4>
-          <p class="blog-date">
-            18 July 2018
-          </p>
-        </div>
-        <div class="col-lg-4 col-md-6 col-sm-8">
-          <a href="blog/korzhev.html"><img class="feature" src="images/korzhev.jpg" /></a>
-          <h4><a href="blog/korzhev.html">The Soviet Union as Love Story</a></h4>
-          <p class="blog-date">
-            28 June 2016
-          </p>
-        </div>
-        <div class="col-lg-4 col-md-6 col-sm-8">
-          <a href="blog/fictional-criticism.html"><img class="feature" src="https://m.media-amazon.com/images/I/81LcZ2b+phL._AC_UF1000,1000_QL80_.jpg" /></a>
-          <h4><a href="blog/fictional-criticism.html">Fictional Criticism</a></h4>
-          <p class="blog-date">
-            6 January 2016
-          </p>
-        </div>
-        <div class="col-lg-4 col-md-6 col-sm-8">
-          <a href="blog/resurrecting-resistance.html"><img class="feature" src="images/ulitskaia.jpg" /></a>
-          <h4><a href="blog/resurrecting-resistance.html">Resurrecting Resistance for the Putin Era</a></h4>
-          <p class="blog-date">
-            31 December 2015
-          </p>
-        </div>
-            <div class="col-lg-4 col-md-6 col-sm-8">
-                <a href="blog/writers-of-reason.html"><img class="feature" src="images/dfw.png" /></a>
-                <h4><a href="blog/writers-of-reason.html">Writers of Reason, Writers of Wonder</a></h4>
-                <p class="blog-date">
-                  10 September 2015
-                </p>
-              </div>
+    <div class="profile">
+  <div class="float-left">
+    <figure>
+      <a href="https://www.cornellpress.cornell.edu/book/9781501779794/cultural-capitalism/#bookTabs=1">
+        <img class="img-proj" src="https://cornellpress-us.imgix.net/9781501779794.jpg?auto=format&w=298&q=20&dpr=2" align="left" height="300px" width="auto" alt=""></a>
+  <figcaption align="center"><em><a href="https://www.cornellpress.cornell.edu/book/9781501779794/cultural-capitalism/#bookTabs=1">Cultural Capitalism: Literature and the Market After Socialism</a></em></figcaption>
+    </figure>
+  </div>
 
-            </div>
+            <p>
+              Cultural Capitalism is a long-term research project that examines the rise of the book market in post-Soviet Russia
+              in order to understand the development of capitalist aesthetics and the effects of capitalist thinking
+              on cultural production. The project includes a number of article publications as well as the forthcoming
+              book <em><a href="https://www.cornellpress.cornell.edu/book/9781501779794/cultural-capitalism/#bookTabs=1">Cultural Capitalism: Literature and the Market After Socialism</a></em>
+              (Cornell University Press, 2025).
+            </p>
+            <p>One aspect of this project was compiling, a data set of all the titles listed in Russia‘s first bestseller lists.
+              Over the course of several years, I compiled a full set of the “best sellers of Moscow“ lists published in the
+              industry periodical <em>Knizhnoe obozrenie</em> (or <em>The Book Review</em>). In 2022 and 2023, I worked with
+              two research assistants at Georgetown University, Amelia Benjamin and Nina Armstrong, to extract the data from
+              these lists into a usable data set. Some of that data appears in the book. But I also wanted to present it here
+              in a more dynamic form than a book publication would allow.</p>
+
+              <p>To get started, take a look at this bar chart race of the best selling authors of 1990s Russia parentheses
+              push play in the bottom left hand corner.</p>
+
+              <br />
+              <h3 align="center">Bestselling Fiction Authors by Ranked Points*, Nov. 1993–Jun. 1999</h3>
+              <br />
+              <div class="flourish-embed flourish-bar-chart-race" data-src="visualisation/18744225"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
+
+        <figcaption>
+          * Ranked points assigns points to each author according to rank on the bestseller list. First place earns 10
+          points, second place 9 points, and so on. This chart aggregates those points over the course of the lists.
+        </figcaption>
+        <br />
+
+
+              <p>To learn more about what this bar chart means, check out a series of blog posts about these bestseller
+                lists (<a href="blog/bestsellers-of-moscow.html">Bestsellers of Moscow Part I</a>,
+                <a href="blog/bestsellers-of-moscow-2.html">Part II</a>, and
+                <a href="blog/bestsellers-of-moscow-3.html">Part III</a>).</p>
+
+                <p>If you’re interested in digging further into the Cultural Capitalism project, here are some places
+                  to start:
+              <ul>
+                <li>
+                  Read about the <a href="https://www.academia.edu/65812258/_The_Bestseller_or_The_Cultural_Logic_of_Postsocialism_Slavic_Review_79_3_Fall_2020_613_635">Russian bestseller lists</a> in an article that appeared in <em>Slavic Review</em>.
+                </li>
+                <li>
+                  Read about <a href="https://www.academia.edu/122129437/_%D0%9B%D0%B8%D1%82%D0%B5%D1%80%D0%B0%D1%82%D1%83%D1%80%D0%BD%D1%8B%D0%B9_%D0%BA%D0%B0%D0%BF%D0%B8%D1%82%D0%B0%D0%BB%D0%B8%D0%B7%D0%BC_%D0%B8_%D1%8D%D0%BA%D0%BE%D0%BD%D0%BE%D0%BC%D0%B8%D0%BA%D0%B0_%D0%BF%D1%80%D0%B5%D1%81%D1%82%D0%B8%D0%B6%D0%B0_%D0%9F%D1%80%D0%B5%D0%BC%D0%B8%D0%B8_%D0%B2_1990_%D0%B5_%D0%B8_2000_%D0%B5_%D0%B3%D0%B3_Literary_Capitalism_and_the_Economy_of_Prestige_Post_Soviet_Prizes_in_the_1990s_and_2000s_Novoe_literaturnoe_obozrenie_No_179_Jan_2023_202_218_in_Russian_">post-Soviet literary prizes</a> in an article that appeared in <em>Novoe literaturnoe obozrenie</em> (in Russian).
+                </li>
+                <li>
+                  Download the <a href="https://github.com/bradleygorski/BestsellersofMoscow">open source data set</a> of all the 1990s bestsellers published in the central Moscow bestseller lists.
+                </li>
+                <li>
+                  And of course, <a href="https://www.cornellpress.cornell.edu/book/9781501779794/cultural-capitalism/#bookTabs=1">pre-order the book</a>.
+                </li>
+              </ul></p>
+
 
       <hr />
       <div class="row">
