--- a/research.html
+++ b/research.html
@@ -84,7 +84,7 @@
     <h2 align="center">Ongoing Projects</h2>
     <hr />
 
-    <h3><a href="">Cultural Capitalism</a></h3>
+    <h3><a href="CulturalCapitalism.html">Cultural Capitalism</a></h3>
     <br />
 <div class="float-left">
   <figure>
@@ -95,7 +95,7 @@
 </div>
 
           <p>
-            The ongoing <a href="">project on Cultural Capitalism</a> looks at the rise of the book market in post-Soviet Russian
+            The ongoing <a href="CulturalCapitalism.html">project on Cultural Capitalism</a> looks at the rise of the book market in post-Soviet Russian
             in order to understand the development of capitalist aesthetics and the effects of capitalist thinking
             on cultural production. The project includes a number of article publications as well as the forthcoming
             book <em><a href="https://www.cornellpress.cornell.edu/book/9781501779794/cultural-capitalism/#bookTabs=1">Cultural Capitalism: Literature and the Market After Socialism</a></em>
@@ -106,7 +106,7 @@
             to compile a data set of all the books listed in what were the first and longest-running Russian bestseller
             lists, the “Bestsellers of Moscow” printed every week in the publishing industry newspaper <em>Knizhnoe obozrenie</em>
             (The Book Review). We have analyzed this data in a series of visualizations which appear in the appendix of the book
-            <em>Cultural Capitalism</em> and in more dynamic form on the project page <a href="">here</a>.
+            <em>Cultural Capitalism</em> and in more dynamic form on the project page <a href="CulturalCapitalism.html">here</a>.
                     </p>
 
         <hr />
@@ -374,7 +374,7 @@
       <h4 align="right">
         <a href="research.html">top</a>
       </h4>
-  
+
       <hr />
       <div class="row">
         <div class="col-lg-3 col-md-6">
