--- a/research.html
+++ b/research.html
@@ -362,19 +362,21 @@
       <hr />
       <h2 align="center">Other Projects</h2>
       <br />
-      <p>I'm currently a lead researcher on a project creating a <a href="https://postsoviet90s.com/" target="_blank">digital
+      <p>I'm currently a core researcher on a project creating a <a href="https://postsoviet90s.com/" target="_blank">digital
         archive of the post-Soviet 1990s</a> led by <a href="https://as.nyu.edu/faculty/maya-vinokour.html"
          target="_blank">Maya Vinokour</a> (NYU) and recently granted a $250,000 grant from the NEH.</p>
       <p>
-        I'm the series editor for <a href="https://rowman.com/Action/SERIES/_/LEXCRL/Crosscurrents:-Russia's-Literature-in-Context" target="_blank">Crosscurrents:
-          Russian Literature in Context</a> from Rowman & Littlefield. I can't wait to announce a couple of promising new titles in the next year or so.</p>
+        I edit the series <a href="https://rowman.com/Action/SERIES/_/LEXCRL/Crosscurrents:-Russia's-Literature-in-Context" target="_blank">Crosscurrents:
+          Russian Literature in Context</a> for Rowman & Littlefield. I'm looking forward to announcing a couple of exciting new titles very soon.</p>
       <p>
         Along with <a href="https://gufaculty360.georgetown.edu/s/contact/00336000014RVj3AAG/kathleen-smith" target="_blank">Kathleen Smith</a>,
         <a href="https://zzf-potsdam.de/institut/personen/mitarbeiter_innen/juliane-fuerst" target="_blank">Juliane Fürst</a>,
         and <a href="https://veronikapehe.eu/" target="_blank">Veronika Pehe</a>, I'm co-organizing a series of conferences on the "Long
         Perestroika" (1980–2000) across Eastern Europe and the former Soviet Union. Our next conference will take
-        place at Georgetown in March, 2025.
-      </p>
+        place at Georgetown in March, 2025.</p>
+        <p>
+          If any of this piques your interest, <a href="contact.html">get in touch</a>. I'd love to hear from you!
+        </p>
     </thead>
       <h4 align="right">
         <a href="research.html">top</a>
