Updated links to Cornell press book

--- a/research.html
+++ b/research.html
@@ -88,9 +88,9 @@
     <br />
 <div class="float-left">
   <figure>
-    <a href="https://www.cornellpress.cornell.edu/book/9781501779794/cultural-capitalism/#bookTabs=1">
+    <a href="https://www.cornellpress.cornell.edu/book-2/9781501779794/cultural-capitalism/#bookTabs=1" target="_blank">
       <img class="img-proj" src="https://cornellpress-us.imgix.net/9781501779794.jpg?auto=format&w=298&q=20&dpr=2" align="left" height="300px" width="auto" alt=""></a>
-<figcaption align="center"><em><a href="https://www.cornellpress.cornell.edu/book/9781501779794/cultural-capitalism/#bookTabs=1">Cultural Capitalism: Literature and the Market After Socialism</a></em></figcaption>
+<figcaption align="center"><em><a href="https://www.cornellpress.cornell.edu/book-2/9781501779794/cultural-capitalism/#bookTabs=1" target="_blank">Cultural Capitalism: Literature and the Market After Socialism</a></em></figcaption>
   </figure>
 </div>
 
@@ -98,7 +98,7 @@
             The ongoing <a href="CulturalCapitalism.html">project on Cultural Capitalism</a> looks at the rise of the book market in post-Soviet Russian
             in order to understand the development of capitalist aesthetics and the effects of capitalist thinking
             on cultural production. The project includes a number of article publications as well as the forthcoming
-            book <em><a href="https://www.cornellpress.cornell.edu/book/9781501779794/cultural-capitalism/#bookTabs=1">Cultural Capitalism: Literature and the Market After Socialism</a></em>
+            book <em><a href="https://www.cornellpress.cornell.edu/book-2/9781501779794/cultural-capitalism/#bookTabs=1" target="_blank">Cultural Capitalism: Literature and the Market After Socialism</a></em>
             (Cornell University Press, 2025).
           </p>
           <p>
@@ -148,7 +148,7 @@
 
 
         <p>
-        One of the chapters in my book on <em><a href="https://www.cornellpress.cornell.edu/book/9781501779794/cultural-capitalism/#bookTabs=1">Cultural Capitalism</a></em>
+        One of the chapters in my book on <em><a href="https://www.cornellpress.cornell.edu/book-2/9781501779794/cultural-capitalism/#bookTabs=1" target="_blank">Cultural Capitalism</a></em>
         looks at the post-Soviet novel as world literature. In researching that chapter I came to see the recent resurgence
         in the disciplinary paradigm of “World Literature” as a historically embedded phenomenon. Specifically, the paradigm
         gained traction around the end of the Cold War, just as triumphalist narratives of the End of History and a new world
@@ -202,7 +202,7 @@
              2025
           </td>
           <td width="80%">
-             <em><a href="https://www.cornellpress.cornell.edu/book/9781501779794/cultural-capitalism/#bookTabs=1">Cultural Capitalism: Literature and the Market After Socialism</a></em>
+             <em><a href="https://www.cornellpress.cornell.edu/book-2/9781501779794/cultural-capitalism/#bookTabs=1" target="_blank">Cultural Capitalism: Literature and the Market After Socialism</a></em>
              (Cornell University Press, 2025).</p>
           </td>
         </tr>
