Fixed CC link on bio page

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <p>
           Research for that book included a deep dive into 1990s bestsellers in Russia. Along with two research assistants at
           Georgetown, Amelia Bejamin and Nina Armstrong, I catalogued every title to appear on Russia's central bestseller lists in the first
-          post-Soviet decade. You can download the dataset and view some visualizations <a href="blog/bestsellers-of-moscow.html">here</a>.
+          post-Soviet decade. You can download the dataset and view some visualizations <a href="CulturalCapitalism.html">here</a>.
         </p>
       <p>My secondary <a href="research.html">research interests</a> have led me to investigate such disparate subjects as Soviet
         postwar subcultures, disgust in science fiction, medieval festivals in contemporary Russia,
